# claude-skillManager

./: .gitignore  CLAUDE.md  README.md  SkillManager.spec  build.ps1  index.html  package-lock.json  package.json  requirements.txt  run.py  tailwind.config.ts  vite.config.ts
scripts/: build-icon.ps1
src/: App.tsx  _frontmatter_util.py  admin.py  config.py  frontmatter.py  github_client.py  installer.py  local_scanner.py  main.py  main.tsx  marketplace_installer.py  marketplace_remote.py  models.py  pending_prs.py  plugin_state.py  registry.py  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: admin.rs  admin_drafts.rs  app_uninstaller.rs  app_updater.rs  config.rs  error.rs  frontmatter.rs  github_client.rs  installer.rs  lib.rs  local_scanner.rs  logger.rs  main.rs  marketplace_installer.rs  marketplace_remote.rs  models.rs  notification_setup.rs  pending_prs.rs  plugin_state.rs  pr_history.rs  properties.rs  registry.rs  skill_watch.rs  taskbar.rs  token_store.rs  tray.rs
src-tauri/src/commands/: mod.rs
src/components/: AddMarketplaceDialog.tsx  AdminLocalPanel.tsx  AdminWizards.tsx  ArchivedSkillsPanel.tsx  CommandPalette.tsx  DiffPreviewDialog.tsx  DuplicateSkillsPanel.tsx  GiteaInstancesCard.tsx  HelpDialog.tsx  NotificationStack.tsx  ResizableSplit.tsx  SettingsDialog.tsx  Sidebar.tsx  SkillMarkdown.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  switch.tsx  textarea.tsx
src/hooks/: useAppVersion.ts  useInstallMarketplace.ts  usePrPolling.ts  useRefresh.ts  useSkillWatch.ts  useTaskbarBadge.ts  useTrayEvents.ts
src/lib/: api.ts  logger.ts  types.ts  utils.ts
src/pages/: Admin.tsx  Overview.tsx  Plugins.tsx  Settings.tsx  Skills.tsx
src/stores/: app.ts  helpDialog.ts  notifications.ts  settingsDialog.ts  skillDirty.ts  theme.ts  trackingView.ts  ui.ts
src/ui/: admin_dialog.py  common.py  detail_panel.py  help_dialog.py  items_list.py  main_window.py  nav_rail.py  plugins_tree.py  settings_dialog.py  skill_editor.py  theme.py  widgets.py
