[package]
name = "skillmanager"
version = "0.1.0"
description = "GUI for managing Claude Code plugins, marketplaces and skills"
authors = ["Valentin Pitel"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "skillmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
directories = "5"
regex = "1"
similar = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
